- modification fonction parc récent - modification hauteur graphique loyer - changement région par défaut

--- a/packages.bib
+++ b/packages.bib
@@ -21,11 +21,12 @@
   url = {https://CRAN.R-project.org/package=cartography},
 }
 @Manual{R-COGiter,
-  title = {COGiter: Functions, Data And Map To Help People To Analyse French Territorial Data},
+  title = {COGiter: Functions, Data And Map To Help People To Analyse French
+Territorial Data},
   author = {Maël THEULIERE},
-  note = {R package version 0.0.0.9001},
+  year = {2019},
+  note = {R package version 0.0.0.9002},
   url = {https://github.com/MaelTheuliere/COGiter},
-  year = {2018},
 }
 @Manual{R-devtools,
   title = {devtools: Tools to Make Developing R Packages Easier},
@@ -79,8 +80,8 @@
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2018},
-  note = {R package version 1.21},
+  year = {2019},
+  note = {R package version 1.22},
   url = {https://CRAN.R-project.org/package=knitr},
 }
 @Manual{R-patchwork,
@@ -104,13 +105,6 @@
   note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
-@Manual{R-rlang,
-  title = {rlang: Functions for Base Types and Core R and 'Tidyverse' Features},
-  author = {Lionel Henry and Hadley Wickham},
-  year = {2019},
-  note = {R package version 0.3.1},
-  url = {https://CRAN.R-project.org/package=rlang},
-}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
@@ -123,7 +117,7 @@
   author = {Maël Theulière},
   note = {R package version 0.0.0.9000},
   url = {https://github.com/MaelTheuliere/rrrpls},
-  year = {2018},
+  year = {2019},
 }
 @Manual{R-sf,
   title = {sf: Simple Features for R},
