- beaucoup trop de modif à compiler...

--- a/inst/rmarkdown/templates/rapport_rpls/skeleton/03-typelogement.Rmd
+++ b/inst/rmarkdown/templates/rapport_rpls/skeleton/03-typelogement.Rmd
@@ -11,7 +11,7 @@ composeur_carte(indicateur="Logements collectifs",
 ```
 
 ```{r comparaison_parc_recent_type_logement,fig.width=14,fig.height=8}
-p_comparaison_parc_recent_type_logement<-graphique_comparaison_parc_recent(indicateur="Logements collectifs",title="Logements sociaux collectifs",caption=caption)
+p_comparaison_parc_recent_type_logement<-graphique_comparaison_parc_recent(indicateur="Part des logements collectifs",title="Logements sociaux collectifs",caption=caption)
 p_comparaison_parc_recent_type_logement
 ```
 
