--- a/inst/rmarkdown/templates/rapport_rpls/skeleton/08-loyer.Rmd
+++ b/inst/rmarkdown/templates/rapport_rpls/skeleton/08-loyer.Rmd
@@ -1,8 +1,8 @@
 # Les loyer dans le parc social {#loyer_m2}
 
 ```{r map_loyer_m2,fig.width=14,fig.height=10}
-p1<-carte_indic(indicateur="Loyer au m2",variable=Valeur)
-p2<-carte_indic(indicateur="Loyer au m2",variable=Valeur,zoom_reg = T)
+p1<-carte_indic(indicateur="Loyer au m2",variable=Valeur,zoom_reg = T,title="Loyer moyen au m2 dans le parc social au 1er janvier 2018")
+p2<-carte_indic(indicateur="Loyer au m2",variable=Valeur)
 
 p5<-legende_carte_indic(indicateur="Loyer au m2",variable=Valeur)
 p<-p1+p2+plot_layout(ncol=2,widths = c(5,4))
