--- a/inst/rmarkdown/templates/rapport_rpls/skeleton/01-poidsduparc.Rmd
+++ b/inst/rmarkdown/templates/rapport_rpls/skeleton/01-poidsduparc.Rmd
@@ -1,13 +1,14 @@
 # Le poids du parc social dans l'ensemble du parc {#poidsduparc}
 
 ```{r map_poids,fig.width=12,fig.height=7}
-composeur_carte(indicateur="Nombre de logements sociaux",
+composeur_carte(.data = indicateurs_rpls,
+                indicateur="Nombre de logements sociaux",
                 titre="Part des logements hlm dans les résidences principales au 1er janvier 2018",
                 soustitre="En %",
                 parc_recent=F,
                 basdepage=NULL,
                 filtre_zero=F,
-                na_recode="Pas de logements sociaux")
+                na_recode="Aucun logement\nsocial")
 ```
 
 ```{r poids_du_parc, fig.align="right",fig.width=12,fig.height=6}
@@ -20,8 +21,8 @@ df %>%
   geom_point(aes(x=Zone,y=Pourcent,fill=TypeZone),color="white",pch=21)+
   theme_graph()+
   coord_flip()+
-  scale_color_viridis_d(option = "inferno",end=.9,begin=.2)+
-  scale_fill_viridis_d(option = "inferno",end=.9,begin=.2)+
+  scale_color_dreal_d() +
+  scale_fill_dreal_d() +
   theme(legend.position = "none")+
-  labs(x="",y="",title="Poids du parc social dans l'ensemble du parc",caption=caption)
+  labs(x="",y="",title=str_wrap("Poids du parc social dans l'ensemble du parc",30),caption=caption_poids)
 ```
