--- a/inst/rmarkdown/templates/rapport_rpls/skeleton/07-dep_ges.Rmd
+++ b/inst/rmarkdown/templates/rapport_rpls/skeleton/07-dep_ges.Rmd
@@ -12,7 +12,7 @@ composeur_carte(indicateur="DPE GES classe A,B ou C",
 
 
 ```{r comparaison_parc_recent_dpe_ges,fig.width=14,fig.height=8}
-p_graphique_comparaison_parc_recent_dpe_ges<-graphique_comparaison_parc_recent(indicateur="DPE GES classe A,B ou C",title="Logements sociaux avec un DPE GES de classe A,B ou C",caption=caption)
+p_graphique_comparaison_parc_recent_dpe_ges<-graphique_comparaison_parc_recent(indicateur="DPE GES classe A,B ou C",title="Part des logements sociaux avec un DPE GES de classe A,B ou C",caption=caption)
 p_graphique_comparaison_parc_recent_dpe_ges
 ```
 
