--- a/inst/rmarkdown/templates/rapport_rpls/skeleton/06-dpe_energie.Rmd
+++ b/inst/rmarkdown/templates/rapport_rpls/skeleton/06-dpe_energie.Rmd
@@ -13,12 +13,13 @@ composeur_carte(indicateur="DPE énergie classe A,B ou C",
 
 
 ```{r comparaison_parc_recent_dpe_energie,fig.width=14,fig.height=8}
-p_graphique_comparaison_parc_recent_dpe_energie<-graphique_comparaison_parc_recent(indicateur="DPE énergie classe A,B ou C",title="Part des logements sociaux avec un DPE énergie de classe A,B ou C",caption=caption)
+p_graphique_comparaison_parc_recent_dpe_energie<-graphique_comparaison_parc_recent(indicateur="DPE énergie classe A,B ou C",titre="Part des logements sociaux avec un DPE énergie de classe A,B ou C",caption=caption)
 p_graphique_comparaison_parc_recent_dpe_energie
 ```
 
-```{r fig.width=12,fig.height = 6}
-graph_repartition_par_date(indicateur=dpeenergie_red,
-                           titre="Répartition des logements par DPE énergie",
+```{r fig.width=12,fig.height = 8}
+graph_repartition_par_date(indicateur = dpeenergie_red,
+                           titre = "Répartition des logements par DPE énergie",
+                           palette = "discrete_long"
                            )
 ```
