--- a/inst/rstudio/templates/project/ressources/02-croissance.Rmd
+++ b/inst/rstudio/templates/project/ressources/02-croissance.Rmd
@@ -2,12 +2,13 @@
 
 ```{r map_poids_recent,fig.width=12,fig.height=6}
 p_croissance <- carte_indic_croissance(
+  .data = indicateurs_rpls,
   zoom_reg = T,
-  na_recode="Pas de parc récent"
+  na_recode = "Pas de parc récent"
 ) +
   carte_indic_croissance(
     zoom_reg = F,
-  na_recode="Pas de parc récent"
+    na_recode = "Pas de parc récent"
   ) +
   plot_layout(
     ncol = 2,
@@ -34,5 +35,5 @@ df %>%
   scale_color_dreal_d() +
   scale_fill_dreal_d() +
   theme(legend.position = "none") +
-  labs(x = "", y = "", title = str_wrap("Poids du parc récent dans l'ensemble du parc social",30), caption = caption)
+  labs(x = "", y = "", title = str_wrap("Poids du parc récent dans l'ensemble du parc social", 30), caption = caption)
 ```
