--- a/inst/rstudio/templates/project/ressources/03-typelogement.Rmd
+++ b/inst/rstudio/templates/project/ressources/03-typelogement.Rmd
@@ -1,21 +1,26 @@
 # Type de logement {#typelogement}
 
 ```{r map_type_logement,fig.width=14,fig.height=20}
-composeur_carte(indicateur="Logements collectifs",
-                titre="Part des logements collectifs dans le parc social au 1er janvier 2018",
-                soustitre="En %",
-                parc_recent=T,
-                basdepage=NULL,
-                filtre_zero=F,
-                na_recode="Pas de logements")
+composeur_carte(
+  .data = indicateurs_rpls,
+  indicateur = "Logements collectifs",
+  titre = "Part des logements collectifs dans le parc social au 1er janvier 2018",
+  soustitre = "En %",
+  parc_recent = T,
+  basdepage = NULL,
+  filtre_zero = F,
+  na_recode = "Pas de logements"
+)
 ```
 
 ```{r comparaison_parc_recent_type_logement,fig.width=14,fig.height=8}
-p_comparaison_parc_recent_type_logement<-graphique_comparaison_parc_recent(indicateur="Logements collectifs",titre="Logements sociaux collectifs",caption=caption)
+p_comparaison_parc_recent_type_logement <- graphique_comparaison_parc_recent(.data = df, indicateur = "Logements collectifs", titre = "Logements sociaux collectifs", caption = caption)
 p_comparaison_parc_recent_type_logement
 ```
 
 ```{r repartition_par_date_type_logement, fig.width=12,fig.height = 8}
-graph_repartition_par_date(indicateur=typeconst_red,
-                           titre="Répartition des logements individuels et collectifs")
+graph_repartition_par_date(
+  .data = rpls_par_date, indicateur = typeconst_red,
+  titre = "Répartition des logements individuels et collectifs"
+)
 ```
