--- a/inst/rstudio/templates/project/ressources/05-pieces.Rmd
+++ b/inst/rstudio/templates/project/ressources/05-pieces.Rmd
@@ -1,22 +1,32 @@
 # Le parc social de 1 et 2 pièces {#pieces}
 
 ```{r map_pieces,fig.width=14,fig.height=20}
-composeur_carte(indicateur="moins de 2 pièces",
-                titre="Part des logements de 1 et 2 pièces dans le parc social au 1er janvier 2018",
-                soustitre="En %",
-                parc_recent=T,
-                basdepage=NULL,
-                filtre_zero=F,
-                na_recode="Pas de logements")
+composeur_carte(
+  .data = indicateurs_rpls,
+  indicateur = "moins de 2 pièces",
+  titre = "Part des logements de 1 et 2 pièces dans le parc social au 1er janvier 2018",
+  soustitre = "En %",
+  parc_recent = T,
+  basdepage = NULL,
+  filtre_zero = F,
+  na_recode = "Pas de logements"
+)
 ```
 
 
 ```{r comparaison_parc_recent_pieces,fig.width=14,fig.height=8}
-p4<-graphique_comparaison_parc_recent(indicateur="moins de 2 pièces",titre="Part des logements sociaux de 1 et 2 pièces",caption=caption)
+p4 <- graphique_comparaison_parc_recent(
+  .data = df,
+  indicateur = "moins de 2 pièces", titre = "Part des logements sociaux de 1 et 2 pièces", 
+  caption = caption
+)
 p4
 ```
 
 ```{r fig.width=12,fig.height = 8}
-graph_repartition_par_date(indicateur=nbpiece_red,
-                           titre="Répartition des logements par nombre de pièces")
+graph_repartition_par_date(
+  .data = rpls_par_date,
+  indicateur = nbpiece_red,
+  titre = "Répartition des logements par nombre de pièces"
+)
 ```
