--- a/inst/rstudio/templates/project/ressources/07-dep_ges.Rmd
+++ b/inst/rstudio/templates/project/ressources/07-dep_ges.Rmd
@@ -1,24 +1,32 @@
 # Le parc social avec un DPE gaz à effet de serre A,B ou C {#dpe_ges}
 
 ```{r map_dep_ges,fig.width=14,fig.height=20}
-composeur_carte(indicateur="DPE GES classe A,B ou C",
-                titre="Part des logements sociaux avec DPE GES A,B ou C au 1er janvier 2018",
-                soustitre="En %",
-                parc_recent=T,
-                basdepage=NULL,
-                filtre_zero=F,
-                na_recode="Pas de logements")
+composeur_carte(
+  .data = indicateurs_rpls,
+  indicateur = "DPE GES classe A,B ou C",
+  titre = "Part des logements sociaux avec DPE GES A,B ou C au 1er janvier 2018",
+  soustitre = "En %",
+  parc_recent = T,
+  basdepage = NULL,
+  filtre_zero = F,
+  na_recode = "Pas de logements"
+)
 ```
 
 
 ```{r comparaison_parc_recent_dpe_ges,fig.width=14,fig.height=8}
-p_graphique_comparaison_parc_recent_dpe_ges<-graphique_comparaison_parc_recent(indicateur="DPE GES classe A,B ou C",titre="Part des logements sociaux avec un DPE GES de classe A,B ou C",caption=caption)
+p_graphique_comparaison_parc_recent_dpe_ges <- graphique_comparaison_parc_recent(
+  .data = df,
+  indicateur = "DPE GES classe A,B ou C", titre = "Part des logements sociaux avec un DPE GES de classe A,B ou C", caption = caption
+)
 p_graphique_comparaison_parc_recent_dpe_ges
 ```
 
 ```{r fig.width=12,fig.height = 8}
-graph_repartition_par_date(indicateur=dpeserre_red,
-                           titre="Répartition des logements par DPE GES",
-                           palette = "discrete_long"
-                           )
+graph_repartition_par_date(
+  .data = rpls_par_date,
+  indicateur = dpeserre_red,
+  titre = "Répartition des logements par DPE GES",
+  palette = "discrete_long"
+)
 ```
