--- a/inst/rstudio/templates/project/ressources/02-croissance.Rmd
+++ b/inst/rstudio/templates/project/ressources/02-croissance.Rmd
@@ -28,8 +28,8 @@ df %>%
   spread(SousEnsemble, Valeur) %>%
   mutate(Pourcent = 100 * `Parc de moins de 5 ans` / `Ensemble du parc`) %>%
   ggplot() +
-  geom_segment(aes(x = Zone, xend = Zone, y = 0, yend = Pourcent, color = TypeZone)) +
-  geom_point(aes(x = Zone, y = Pourcent, fill = TypeZone), color = "white", pch = 21) +
+  geom_segment(aes(x = Zone, xend = Zone, y = 0, yend = Pourcent, color = TypeZone),size=1.5) +
+  geom_point(aes(x = Zone, y = Pourcent, fill = TypeZone), color = "white", pch = 21,size=4) +
   theme_graph() +
   coord_flip() +
   scale_color_dreal_d() +
