--- a/packages.bib
+++ b/packages.bib
@@ -21,8 +21,8 @@
   url = {https://CRAN.R-project.org/package=cartography},
 }
 @Manual{R-COGiter,
-  title = {COGiter: Functions, Data And Map To Help People To Analyse French
-Territorial Data},
+  title = {COGiter: Fonctions, données et fonds de carte pour gérer les données au
+territoire},
   author = {Maël THEULIERE},
   year = {2019},
   note = {R package version 0.0.1.9000},
@@ -145,6 +145,12 @@ Territorial Data},
   year = {2019},
   note = {R package version 1.0.0},
   url = {https://CRAN.R-project.org/package=tidyr},
+}
+@Manual{R-TidyRpls,
+  title = {TidyRpls: Les données RPLS},
+  author = {Maël Theulière},
+  year = {2019},
+  note = {R package version 1.0},
 }
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the 'Tidyverse'},
