--- a/inst/rstudio/templates/project/ressources/03-typelogement.Rmd
+++ b/inst/rstudio/templates/project/ressources/03-typelogement.Rmd
@@ -20,7 +20,7 @@ p_comparaison_parc_recent_type_logement
 
 ```{r repartition_par_date_type_logement, fig.width=12,fig.height = 8}
 graph_repartition_par_date(
-  .data = rpls_par_date, indicateur = typeconst_red,
+  .data = rpls_par_date, indicateur = typeconst,
   titre = "Répartition des logements individuels et collectifs"
 )
 ```
