--- a/inst/rstudio/templates/project/ressources/04-qpv.Rmd
+++ b/inst/rstudio/templates/project/ressources/04-qpv.Rmd
@@ -27,7 +27,7 @@ p4
 ```{r fig.width=12,fig.height = 8}
 graph_repartition_par_date(
   .data = rpls_par_date,
-  indicateur = qpv_red,
+  indicateur = qpv,
   titre = "Répartition des logements en QPV et hors QPV"
 )
 ```
