--- a/inst/rstudio/templates/project/ressources/05-pieces.Rmd
+++ b/inst/rstudio/templates/project/ressources/05-pieces.Rmd
@@ -26,7 +26,7 @@ p4
 ```{r fig.width=12,fig.height = 8}
 graph_repartition_par_date(
   .data = rpls_par_date,
-  indicateur = nbpiece_red,
+  indicateur = nbpiece,
   titre = "Répartition des logements par nombre de pièces"
 )
 ```
