--- a/inst/rstudio/templates/project/ressources/07-dep_ges.Rmd
+++ b/inst/rstudio/templates/project/ressources/07-dep_ges.Rmd
@@ -25,7 +25,7 @@ p_graphique_comparaison_parc_recent_dpe_ges
 ```{r fig.width=12,fig.height = 8}
 graph_repartition_par_date(
   .data = rpls_par_date,
-  indicateur = dpeserre_red,
+  indicateur = dpeserre,
   titre = "Répartition des logements par DPE GES",
   palette = "discrete_long"
 )
